# demo-writer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: dllmain.cpp
src/core/: byond_constants.h  byond_functions.cpp  byond_functions.h  byond_functions.inl  byond_structures.h  core.cpp  core.h  find_functions.cpp  find_functions.h  hooking.cpp  hooking.h
src/core/subhook/: subhook_x86.c
src/demo_writer/: demo_writer.cpp  demo_writer.h  state_tracking.cpp  state_tracking.h  write_animate.cpp  write_animate.h  write_appearance.cpp  write_appearance.h  write_clients.cpp  write_clients.h  write_objects.cpp  write_objects.h  write_primitive.cpp  write_primitive.h
